accommodation service postgresdb connected

--- a/.env
+++ b/.env
@@ -8,3 +8,7 @@ RECOMMENDATION_SERVICE_ADDRESS=:12005
 SEARCH_SERVICE_ADDRESS=:12006
 RATING_SERVICE_ADDRESS=:12007
 FLIGHT_SERVICE_ADDRESS=:12008
+
+ACCOMMODATION_DATABASE_ADDRESS=:12102
+ACCOMMODATION_DATABASE_USERNAME=postgres
+ACCOMMODATION_DATABASE_PASSWORD=postgres
