--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -57,15 +57,15 @@ services:
     environment:
       BOOKING_SERVICE_ADDRESS: ${BOOKING_SERVICE_ADDRESS}
 
-  public_app:
-    image: public_app
-    container_name: public_app
-    hostname: public_app
-    build:
-      context: ./public-app/.
-      dockerfile: Dockerfile
-    ports:
-      - "10000:3000"
-    restart: always
-    depends_on:
-      - api_gateway
+#  public_app:
+#    image: public_app
+#    container_name: public_app
+#    hostname: public_app
+#    build:
+#      context: ./public-app/.
+#      dockerfile: Dockerfile
+#    ports:
+#      - "10000:10000"
+#    restart: always
+#    depends_on:
+#      - api_gateway
