User service db setup and auth and user service Dockerfiles updates

--- a/.env
+++ b/.env
@@ -12,3 +12,10 @@ FLIGHT_SERVICE_ADDRESS=:12008
 ACCOMMODATION_DATABASE_ADDRESS=:12102
 ACCOMMODATION_DATABASE_USERNAME=postgres
 ACCOMMODATION_DATABASE_PASSWORD=postgres
+
+USER_DATABASE_ADDRESS=:12101
+USER_DATABASE=UserServiceDb
+USER_DATABASE_SERVER=user_database
+USER_DATABASE_PORT=3306
+USER_DATABASE_USERNAME=root
+USER_DATABASE_PASSWORD=Root1234
