--- a/user-service/user-service/appsettings.json
+++ b/user-service/user-service/appsettings.json
@@ -10,5 +10,15 @@
     "EndpointDefaults": {
       "Protocols": "Http2"
     }
+  },
+  "MySqlConfig": {
+    "Server": "localhost",
+    "Port": "3306",
+    "Database": "UserServiceDb",
+    "User": "root",
+    "Password": "Root1234"
+  },
+  "Security": {
+    "Salt": "3noYSudYrxuqNMDoepG0oQ=="
   }
 }
