--- a/auth-service/auth-service/Dockerfile
+++ b/auth-service/auth-service/Dockerfile
@@ -1,14 +1,18 @@
-FROM mcr.microsoft.com/dotnet/aspnet:7.0 as base
+#See https://aka.ms/containerfastmode to understand how Visual Studio uses this Dockerfile to build your images for faster debugging.
+
+FROM mcr.microsoft.com/dotnet/aspnet:7.0 AS base
 WORKDIR /app
 
-FROM mcr.microsoft.com/dotnet/sdk:7.0  AS build
-COPY . /src
+FROM mcr.microsoft.com/dotnet/sdk:7.0 AS build
 WORKDIR /src
-RUN ls
+COPY ["auth-service/auth-service.csproj", "auth-service/"]
+RUN dotnet restore "auth-service/auth-service.csproj"
+COPY . .
+WORKDIR "/src/auth-service"
 RUN dotnet build "auth-service.csproj" -c Release -o /app/build
 
 FROM build AS publish
-RUN dotnet publish "auth-service.csproj" -c Release -o /app/publish
+RUN dotnet publish "auth-service.csproj" -c Release -o /app/publish /p:UseAppHost=false
 
 FROM base AS final
 WORKDIR /app
