--- a/public-app/package.json
+++ b/public-app/package.json
@@ -1,11 +1,14 @@
 {
-  "name": "public-app",
+  "name": "batistuta-booking",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
     "@fontsource/roboto": "^4.5.8",
+    "@fullcalendar/core": "^6.1.7",
+    "@fullcalendar/daygrid": "^6.1.7",
+    "@fullcalendar/react": "^6.1.7",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.0",
     "@testing-library/jest-dom": "^5.16.5",
@@ -24,6 +27,7 @@
     "react-router": "^6.11.1",
     "react-router-dom": "^6.11.1",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.2",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4",
     "zustand": "^4.3.8"
