--- a/.env
+++ b/.env
@@ -19,3 +19,7 @@ USER_DATABASE_SERVER=user_database
 USER_DATABASE_PORT=3306
 USER_DATABASE_USERNAME=root
 USER_DATABASE_PASSWORD=Root1234
+
+BOOKING_DATABASE_ADDRESS=:12103
+BOOKING_DATABASE_USERNAME=postgres
+BOOKING_DATABASE_PASSWORD=postgres
