--- a/public-app/package.json
+++ b/public-app/package.json
@@ -8,6 +8,7 @@
     "@fontsource/roboto": "^4.5.8",
     "@fullcalendar/core": "^6.1.7",
     "@fullcalendar/daygrid": "^6.1.7",
+    "@fullcalendar/interaction": "^6.1.7",
     "@fullcalendar/react": "^6.1.7",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.0",
