--- a/auth-service/auth-service/appsettings.json
+++ b/auth-service/auth-service/appsettings.json
@@ -10,5 +10,11 @@
     "EndpointDefaults": {
       "Protocols": "Http2"
     }
+  },
+  "Services": {
+    "USER_SERVICE_ADDRESS": "http://localhost:12001"
+  },
+  "JwtSettings": {
+    "Secret": "gFQhPmuxeDJLhmnhIZNk6xEvxxXPJhBK"
   }
 }
