--- a/public-app/package.json
+++ b/public-app/package.json
@@ -29,6 +29,7 @@
     "react-router-dom": "^6.11.1",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.2",
+    "rsuite": "^5.33.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4",
     "zustand": "^4.3.8"
