--- a/accommodation-service/Dockerfile
+++ b/accommodation-service/Dockerfile
@@ -5,13 +5,16 @@ FROM golang:latest as builder
 WORKDIR /app
 
 # Copy go mod and sum files
-COPY go.mod go.sum ./
+COPY ./accommodation-service/go.mod ./accommodation-service/go.sum ./
+
+# Copy the local dependency
+COPY /common ../common
 
 # Download all dependencies. Dependencies will be cached if the go.mod and go.sum files are not changed
 RUN go mod download
 
 # Copy everything from the current directory to the Working Directory inside the container
-COPY . .
+COPY ./accommodation-service/ .
 
 # Build the Go app
 RUN CGO_ENABLED=0 GOOS=linux go build -a -installsuffix cgo -o main .
