--- a/api-gateway/Dockerfile
+++ b/api-gateway/Dockerfile
@@ -5,13 +5,16 @@ FROM golang:latest as builder
 WORKDIR /app
 
 # Copy go mod and sum files
-COPY go.mod go.sum ./
+COPY ./api-gateway/go.mod ./api-gateway/go.sum ./
+
+# Copy the local dependency
+COPY /common ../common
 
 # Download all dependencies. Dependencies will be cached if the go.mod and go.sum files are not changed
 RUN go mod download
 
 # Copy everything from the current directory to the Working Directory inside the container
-COPY . .
+COPY ./api-gateway/ .
 
 # Build the Go app
 RUN CGO_ENABLED=0 GOOS=linux go build -a -installsuffix cgo -o main .
@@ -25,6 +28,9 @@ WORKDIR /root/
 
 # Copy the Pre-built binary file from the previous stage
 COPY --from=builder /app/main .
+
+# Expose port 11000 to the outside world
+EXPOSE 11000
 
 # Command to run the executable
 CMD ["./main"]
