rating service initialized

--- a/.env
+++ b/.env
@@ -6,7 +6,7 @@ BOOKING_SERVICE_ADDRESS=:12003
 NOTIFICATION_SERVICE_ADDRESS=:12004
 RECOMMENDATION_SERVICE_ADDRESS=:12005
 SEARCH_SERVICE_ADDRESS=:12006
-RATING_SERVICE_ADDRESS=:12007
+RATING_SERVICE_ADDRESS=12007
 FLIGHT_SERVICE_ADDRESS=:12008
 
 ACCOMMODATION_DATABASE_ADDRESS=:12102
@@ -19,3 +19,13 @@ USER_DATABASE_SERVER=user_database
 USER_DATABASE_PORT=3306
 USER_DATABASE_USERNAME=root
 USER_DATABASE_PASSWORD=Root1234
+
+RATING_DB_PORT=5432
+RATING_DB_USER=postgres
+RATING_DB_PASS=postgres
+RATING_DB_NAME=rating
+
+NATS_HOST=nats
+NATS_PORT=13000
+NATS_USER=admin
+NATS_PASS=password
