create rating saga events defined

--- a/.env
+++ b/.env
@@ -26,6 +26,8 @@ RATING_DB_PASS=postgres
 RATING_DB_NAME=rating
 
 NATS_HOST=nats
-NATS_PORT=13000
+NATS_PORT=4222
 NATS_USER=admin
 NATS_PASS=password
+CREATE_RATING_COMMAND_SUBJECT=rating.create.command
+CREATE_RATING_REPLY_SUBJECT=rating.create.reply
