--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,14 +10,16 @@ services:
       dockerfile: ./api-gateway/Dockerfile
     restart: on-failure
     environment:
+      GATEWAY_ADDRESS: ${GATEWAY_ADDRESS}
       ACCOMMODATION_SERVICE_ADDRESS: accommodation_service${ACCOMMODATION_SERVICE_ADDRESS}
       BOOKING_SERVICE_ADDRESS: booking_service${BOOKING_SERVICE_ADDRESS}
       USER_SERVICE_ADDRESS: user_service${USER_SERVICE_ADDRESS}
       AUTH_SERVICE_ADDRESS: auth_service${AUTH_SERVICE_ADDRESS}
-      GATEWAY_ADDRESS: ${GATEWAY_ADDRESS}
+      RATING_SERVICE_ADDRESS: rating_service:${RATING_SERVICE_ADDRESS}
     depends_on:
       - accommodation_service
       - booking_service
+      - rating_service
     ports:
       - "11000:11000"
 
@@ -124,6 +126,9 @@ services:
       NATS_PORT: ${NATS_PORT}
       NATS_USER: ${NATS_USER}
       NATS_PASS: ${NATS_PASS}
+      AUTH_SERVICE_ADDRESS: auth_service${AUTH_SERVICE_ADDRESS}
+      CREATE_RATING_COMMAND_SUBJECT: ${CREATE_RATING_COMMAND_SUBJECT}
+      CREATE_RATING_REPLY_SUBJECT: ${CREATE_RATING_REPLY_SUBJECT}
     depends_on:
       - rating_database
 
