--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,6 +37,12 @@ services:
       ACCOMMODATION_DATABASE_ADDRESS: accommodation_database:5432
       ACCOMMODATION_DATABASE_USERNAME: ${ACCOMMODATION_DATABASE_USERNAME}
       ACCOMMODATION_DATABASE_PASSWORD: ${ACCOMMODATION_DATABASE_PASSWORD}
+      NATS_HOST: ${NATS_HOST}
+      NATS_PORT: ${NATS_PORT}
+      NATS_USER: ${NATS_USER}
+      NATS_PASS: ${NATS_PASS}
+      CREATE_RATING_COMMAND_SUBJECT: ${CREATE_RATING_COMMAND_SUBJECT}
+      CREATE_RATING_REPLY_SUBJECT: ${CREATE_RATING_REPLY_SUBJECT}
     depends_on:
       - accommodation_database
 
