Modifications in error handling and method for updating user info

--- a/user-service/user-service/appsettings.json
+++ b/user-service/user-service/appsettings.json
@@ -21,5 +21,8 @@
   "Security": {
     "Salt": "3noYSudYrxuqNMDoepG0oQ=="
   },
-  "USER_SERVICE_ADDRESS": "12001"
+  "USER_SERVICE_ADDRESS": "12001",
+  "Services": {
+    "AUTH_SERVICE_ADDRESS": "http://localhost:12000"
+  }
 }
