Add reservation requests functionality

--- a/.env
+++ b/.env
@@ -13,6 +13,10 @@ ACCOMMODATION_DATABASE_ADDRESS=:12102
 ACCOMMODATION_DATABASE_USERNAME=postgres
 ACCOMMODATION_DATABASE_PASSWORD=postgres
 
+BOOKING_DATABASE_ADDRESS=:12103
+BOOKING_DATABASE_USERNAME=postgres
+BOOKING_DATABASE_PASSWORD=postgres
+
 USER_DATABASE_ADDRESS=:12101
 USER_DATABASE=UserServiceDb
 USER_DATABASE_SERVER=user_database
