--- a/user-service/user-service/appsettings.json
+++ b/user-service/user-service/appsettings.json
@@ -20,6 +20,7 @@
   },
   "USER_SERVICE_ADDRESS": "12001",
   "Services": {
-    "AUTH_SERVICE_ADDRESS": "http://localhost:12000"
+    "AUTH_SERVICE_ADDRESS": "http://localhost:12000",
+    "RATING_SERVICE_ADDRESS": "http://localhost:12007"
   }
 }
