--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -95,6 +95,7 @@ services:
     environment:
       USER_SERVICE_ADDRESS: ${USER_SERVICE_ADDRESS}
       Services__AUTH_SERVICE_ADDRESS: auth_service${AUTH_SERVICE_ADDRESS}
+      Services__RATING_SERVICE_ADDRESS: rating_service:${RATING_SERVICE_ADDRESS}
       MySqlConfig__Server: ${USER_DATABASE_SERVER}
       MySqlConfig__Port: ${USER_DATABASE_PORT}
       MySqlConfig__Database: ${USER_DATABASE}
