delete rating saga added

--- a/.env
+++ b/.env
@@ -35,3 +35,5 @@ NATS_USER=admin
 NATS_PASS=password
 CREATE_RATING_COMMAND_SUBJECT=rating.create.command
 CREATE_RATING_REPLY_SUBJECT=rating.create.reply
+DELETE_RATING_COMMAND_SUBJECT=rating.delete.command
+DELETE_RATING_REPLY_SUBJECT=rating.delete.reply
