--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -43,6 +43,8 @@ services:
       NATS_PASS: ${NATS_PASS}
       CREATE_RATING_COMMAND_SUBJECT: ${CREATE_RATING_COMMAND_SUBJECT}
       CREATE_RATING_REPLY_SUBJECT: ${CREATE_RATING_REPLY_SUBJECT}
+      DELETE_RATING_COMMAND_SUBJECT: ${DELETE_RATING_COMMAND_SUBJECT}
+      DELETE_RATING_REPLY_SUBJECT: ${DELETE_RATING_REPLY_SUBJECT}
     depends_on:
       - accommodation_database
 
@@ -153,6 +155,8 @@ services:
       AUTH_SERVICE_ADDRESS: auth_service${AUTH_SERVICE_ADDRESS}
       CREATE_RATING_COMMAND_SUBJECT: ${CREATE_RATING_COMMAND_SUBJECT}
       CREATE_RATING_REPLY_SUBJECT: ${CREATE_RATING_REPLY_SUBJECT}
+      DELETE_RATING_COMMAND_SUBJECT: ${DELETE_RATING_COMMAND_SUBJECT}
+      DELETE_RATING_REPLY_SUBJECT: ${DELETE_RATING_REPLY_SUBJECT}
     depends_on:
       - rating_database
 
