--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -70,6 +70,7 @@ services:
       BOOKING_DATABASE_ADDRESS: booking_database:5432
       BOOKING_DATABASE_USERNAME: ${BOOKING_DATABASE_USERNAME}
       BOOKING_DATABASE_PASSWORD: ${BOOKING_DATABASE_PASSWORD}
+      ACCOMMODATION_SERVICE_ADDRESS: accommodation_service${ACCOMMODATION_SERVICE_ADDRESS}
     depends_on:
       - booking_database
 
