remove rating front hooked up, rating list added

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -153,6 +153,7 @@ services:
       NATS_USER: ${NATS_USER}
       NATS_PASS: ${NATS_PASS}
       AUTH_SERVICE_ADDRESS: auth_service${AUTH_SERVICE_ADDRESS}
+      USER_SERVICE_ADDRESS: user_service${USER_SERVICE_ADDRESS}
       CREATE_RATING_COMMAND_SUBJECT: ${CREATE_RATING_COMMAND_SUBJECT}
       CREATE_RATING_REPLY_SUBJECT: ${CREATE_RATING_REPLY_SUBJECT}
       DELETE_RATING_COMMAND_SUBJECT: ${DELETE_RATING_COMMAND_SUBJECT}
