Add stand-out host reservation checks

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -71,6 +71,7 @@ services:
       BOOKING_DATABASE_USERNAME: ${BOOKING_DATABASE_USERNAME}
       BOOKING_DATABASE_PASSWORD: ${BOOKING_DATABASE_PASSWORD}
       ACCOMMODATION_SERVICE_ADDRESS: accommodation_service${ACCOMMODATION_SERVICE_ADDRESS}
+      AUTH_SERVICE_ADDRESS: auth_service${AUTH_SERVICE_ADDRESS}
     depends_on:
       - booking_database
 
