--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -96,6 +96,12 @@ services:
       USER_SERVICE_ADDRESS: ${USER_SERVICE_ADDRESS}
       Services__AUTH_SERVICE_ADDRESS: auth_service${AUTH_SERVICE_ADDRESS}
       Services__RATING_SERVICE_ADDRESS: rating_service:${RATING_SERVICE_ADDRESS}
+      NatsConfiguration__HOST: ${NATS_HOST}
+      NatsConfiguration__PORT: ${NATS_PORT}
+      NatsConfiguration__USER: ${NATS_USER}
+      NatsConfiguration__PASSWORD: ${NATS_PASS}
+      CreateRatingSubjects__CREATE_RATING_COMMAND_SUBJECT: ${CREATE_RATING_COMMAND_SUBJECT}
+      CreateRatingSubjects__CREATE_RATING_REPLAY_SUBJECT: ${CREATE_RATING_REPLY_SUBJECT}
       MySqlConfig__Server: ${USER_DATABASE_SERVER}
       MySqlConfig__Port: ${USER_DATABASE_PORT}
       MySqlConfig__Database: ${USER_DATABASE}
