Delete rating SAGA user service part

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -106,6 +106,8 @@ services:
       NatsConfiguration__PASSWORD: ${NATS_PASS}
       CreateRatingSubjects__CREATE_RATING_COMMAND_SUBJECT: ${CREATE_RATING_COMMAND_SUBJECT}
       CreateRatingSubjects__CREATE_RATING_REPLAY_SUBJECT: ${CREATE_RATING_REPLY_SUBJECT}
+      DeleteRatingSubjects__DELETE_RATING_COMMAND_SUBJECT: ${DELETE_RATING_COMMAND_SUBJECT}
+      DeleteRatingSubjects__DELETE_RATING_REPLY_SUBJECT: ${DELETE_RATING_REPLY_SUBJECT}
       MySqlConfig__Server: ${USER_DATABASE_SERVER}
       MySqlConfig__Port: ${USER_DATABASE_PORT}
       MySqlConfig__Database: ${USER_DATABASE}
