--- a/user-service/user-service/appsettings.json
+++ b/user-service/user-service/appsettings.json
@@ -32,5 +32,9 @@
   "CreateRatingSubjects": {
     "CREATE_RATING_COMMAND_SUBJECT": "rating.create.command",
     "CREATE_RATING_REPLAY_SUBJECT": "rating.create.reply"
+  },
+  "DeleteRatingSubjects": {
+    "DELETE_RATING_COMMAND_SUBJECT": "rating.delete.command",
+    "DELETE_RATING_REPLY_SUBJECT": "rating.delete.reply"
   }
 }
