Host featured solution 1

--- a/user-service/user-service/appsettings.json
+++ b/user-service/user-service/appsettings.json
@@ -21,7 +21,8 @@
   "USER_SERVICE_ADDRESS": "12001",
   "Services": {
     "AUTH_SERVICE_ADDRESS": "http://localhost:12000",
-    "RATING_SERVICE_ADDRESS": "http://localhost:12007"
+    "RATING_SERVICE_ADDRESS": "http://localhost:12007",
+    "BOOKING_SERVICE_ADDRESS": "http://localhost:12003"
   },
   "NatsConfiguration": {
     "HOST": "localhost",
