--- a/.env
+++ b/.env
@@ -29,6 +29,10 @@ RATING_DB_USER=postgres
 RATING_DB_PASS=postgres
 RATING_DB_NAME=rating
 
+NOTIFICATION_DB_PORT=12104
+NOTIFICATION_DB_USER=mongo
+NOTIFICATION_DB_PASSWORD=mongo1234
+
 NATS_HOST=nats
 NATS_PORT=4222
 NATS_USER=admin
