--- a/.env
+++ b/.env
@@ -8,6 +8,7 @@ RECOMMENDATION_SERVICE_ADDRESS=:12005
 SEARCH_SERVICE_ADDRESS=:12006
 RATING_SERVICE_ADDRESS=12007
 FLIGHT_SERVICE_ADDRESS=:12008
+NOTIFICATION_SERVICE_ADDRESS=:12009
 
 ACCOMMODATION_DATABASE_ADDRESS=:12102
 ACCOMMODATION_DATABASE_USERNAME=postgres
@@ -29,9 +30,11 @@ RATING_DB_USER=postgres
 RATING_DB_PASS=postgres
 RATING_DB_NAME=rating
 
+NOTIFICATION_DB_SERVER=notification_database
 NOTIFICATION_DB_PORT=12104
 NOTIFICATION_DB_USER=mongo
 NOTIFICATION_DB_PASSWORD=mongo1234
+NOTIFICATION_DB_NAME=notification
 
 NATS_HOST=nats
 NATS_PORT=4222
