Add recommendation service and graph database

--- a/.env
+++ b/.env
@@ -8,6 +8,7 @@ RECOMMENDATION_SERVICE_ADDRESS=:12005
 SEARCH_SERVICE_ADDRESS=:12006
 RATING_SERVICE_ADDRESS=12007
 FLIGHT_SERVICE_ADDRESS=:12008
+RECOMMENDATION_SERVICE_ADDRESS=:12009
 
 ACCOMMODATION_DATABASE_ADDRESS=:12102
 ACCOMMODATION_DATABASE_USERNAME=postgres
@@ -28,6 +29,9 @@ RATING_DB_PORT=5432
 RATING_DB_USER=postgres
 RATING_DB_PASS=postgres
 RATING_DB_NAME=rating
+
+RECOMMENDATION_DATABASE_USERNAME=neo4j
+RECOMMENDATION_DATABASE_PASSWORD=neopassword
 
 NATS_HOST=nats
 NATS_PORT=4222
