Notification service part 1

--- a/.env
+++ b/.env
@@ -44,3 +44,4 @@ CREATE_RATING_COMMAND_SUBJECT=rating.create.command
 CREATE_RATING_REPLY_SUBJECT=rating.create.reply
 DELETE_RATING_COMMAND_SUBJECT=rating.delete.command
 DELETE_RATING_REPLY_SUBJECT=rating.delete.reply
+NOTIFICATION_SUBJECT=notification
