--- a/notification-service/notification-service/appsettings.json
+++ b/notification-service/notification-service/appsettings.json
@@ -8,15 +8,28 @@
   "AllowedHosts": "*",
   "Kestrel": {
     "EndpointDefaults": {
-      "Protocols": "Http2"
+      "Protocols": "Http1"
     }
   },
   "NOTIFICATION_SERVICE_ADDRESS": "12009",
   "DbConfig": {
     "Server": "localhost",
-    "Port": "27017",
-    "User": "",
-    "Password": "",
+    "Port": "12104",
+    "User": "mongo",
+    "Password": "mongo1234",
     "DatabaseName": "Notification"
+  },
+  "NatsConfiguration": {
+    "Host": "localhost",
+    "Port": "4222",
+    "User": "admin",
+    "Pass": "password"
+  },
+  "NotificationNatsConfig": {
+    "NotificationSubject": "notification",
+    "QueueGroup": "notification"
+  },
+  "Services": {
+    "AuthServiceAddress": "http://localhost:12000"
   }
 }
