--- a/notification-service/notification-service/Properties/launchSettings.json
+++ b/notification-service/notification-service/Properties/launchSettings.json
@@ -6,7 +6,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "dotnetRunMessages": true,
-      "applicationUrl": "http://localhost:5142"
+      "applicationUrl": "http://localhost:12009"
     },
     "https": {
       "commandName": "Project",
@@ -20,6 +20,30 @@
       "commandName": "Docker",
       "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}",
       "publishAllPorts": true
+    },
+    "Profile 1": {
+      "commandName": "IIS",
+      "launchBrowser": true,
+      "launchUrl": "http://localhost/NotificationService",
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Development"
+      }
+    },
+    "Profile 2": {
+      "commandName": "IISExpress",
+      "use64Bit": false
+    }
+  },
+  "iisSettings": {
+    "windowsAuthentication": false,
+    "anonymousAuthentication": true,
+    "iis": {
+      "applicationUrl": "http://localhost/NotificationService",
+      "sslPort": 0
+    },
+    "iisExpress": {
+      "applicationUrl": "http://localhost:2045/",
+      "sslPort": 44390
     }
   }
 }
