--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -201,6 +201,7 @@ services:
       ACCOMMODATION_SERVICE_ADDRESS: accommodation_service${ACCOMMODATION_SERVICE_ADDRESS}
       USER_SERVICE_ADDRESS: user_service${USER_SERVICE_ADDRESS}
       BOOKING_SERVICE_ADDRESS: booking_service${BOOKING_SERVICE_ADDRESS}
+      RATING_SERVICE_ADDRESS: rating_service:${RATING_SERVICE_ADDRESS}
     depends_on:
       recommendation_database:
         condition: service_healthy
