featured hosts filter done

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,6 +41,7 @@ services:
       NATS_PORT: ${NATS_PORT}
       NATS_USER: ${NATS_USER}
       NATS_PASS: ${NATS_PASS}
+      USER_SERVICE_ADDRESS: user_service${USER_SERVICE_ADDRESS}
       CREATE_RATING_COMMAND_SUBJECT: ${CREATE_RATING_COMMAND_SUBJECT}
       CREATE_RATING_REPLY_SUBJECT: ${CREATE_RATING_REPLY_SUBJECT}
       DELETE_RATING_COMMAND_SUBJECT: ${DELETE_RATING_COMMAND_SUBJECT}
