--- a/public-app/package.json
+++ b/public-app/package.json
@@ -12,6 +12,7 @@
     "@fullcalendar/react": "^6.1.7",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.0",
+    "@mui/x-date-pickers": "^6.8.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -21,6 +22,7 @@
     "@types/react-dom": "^18.2.4",
     "axios": "^1.4.0",
     "date-fns": "^2.30.0",
+    "dayjs": "^1.11.8",
     "env-cmd": "^10.1.0",
     "immer": "^10.0.1",
     "ramda": "^0.29.0",
