--- a/public-app/package.json
+++ b/public-app/package.json
@@ -10,6 +10,7 @@
     "@fullcalendar/daygrid": "^6.1.7",
     "@fullcalendar/interaction": "^6.1.7",
     "@fullcalendar/react": "^6.1.7",
+    "@microsoft/signalr": "^7.0.7",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.0",
     "@testing-library/jest-dom": "^5.16.5",
