create and delete rating notifications

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -173,6 +173,7 @@ services:
       CREATE_RATING_REPLY_SUBJECT: ${CREATE_RATING_REPLY_SUBJECT}
       DELETE_RATING_COMMAND_SUBJECT: ${DELETE_RATING_COMMAND_SUBJECT}
       DELETE_RATING_REPLY_SUBJECT: ${DELETE_RATING_REPLY_SUBJECT}
+      NOTIFICATION_SUBJECT: ${NOTIFICATION_SUBJECT}
     depends_on:
       - rating_database
 
